Fixed floating element overflowing inside posts div

--- a/css/style.styl
+++ b/css/style.styl
@@ -269,8 +269,10 @@ h2 {
 }
 
 .posts {
-    padding-bottom: 20px;
-    margin-bottom: 50px;
+    padding: 0px;
+    margin: 0px;
+    border: 0px none;
+    overflow: hidden;
     ul {
         padding: 0px;
         a {
